* Nov 1 2000 hship

Merge PrimixFoundation into Tapestry.  Keeping them seperate had little value.
Change EnumPropertySelectionModel to require that the ResourceBundle be passed in
(since it can't always resolve the bundle, due to classloader issues).
Switch over to Servlet 2.2 APIs.

* Oct 25 2000 hship

Add raw parameter to Insert component.
Make some overdue documentation updates.

* Oct 24 2000 hship

Add the Shell component, and convert the Inspector, Exception, StaleSession
and StaleLink pages to use it.
Tiny change to exception handling when instantiating components and pages.
Add getDouble() method to IBinding.

* Oct 20 2000 hship

Add a JVM property to disable page pooling.

* Oct 18 2000 hship

Add resetServiceEnabled property to AbstractApplication.  Add the IDirect interface.
Implemented caching of FieldBindings.
Make sure the page is identified in a RequestCycleException, if a runtime exception
is thrown during rewindPage().

* Oct 16 2000 hship

Implemented the <field-binding> element of the specification.  Allows a binding to
be expressed in terms of a Java class and a static field of that class.
Move the canonical Tapestry DTD to the tapestry.sourceforge.net website.

* Oct 13 2000 hship

Reorganized how Body and Rollover components work together, slightly, so that less Javascript
has to be stored in memory during the rendering of the Body's wrapped elements.

* Oct 11 2000 hship

Change the interface for IPage and IComponent to allow a no-arguments constructor, and deprecate
the more complicated constructors.

* Oct 6 2000 hship

Service component didn't declare its formal context parameter in its specification.

* Oct 6 2000 hship

Fix the Hidden component to not throw NullPointerException if the listener parameter
is not bound.

* Oct 6 2000 hship

Re-introduce support for automatic onLoad method for the Body component.
Rename the TextField parameter "maximumWidth" to "maximumLength".